# django-boilerplate

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
apps/: urls.py
apps/account/: apps.py  managers.py
apps/account/admin/: __init__.py  account.py  profile.py
apps/account/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_name.py
apps/account/models/: __init__.py  account.py  profile.py
apps/account/services/: account.py
apps/account/signals/: account.py
apps/core/: admin.py  apps.py  forms.py  managers.py  models.py  signals.py  sites.py  storages.py  utils.py
apps/core/admin/: __init__.py  base.py  celery.py
apps/core/management/commands/: do_make_messages.py  generate_secret_key.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  base_model.py
apps/core/services/: account.py
apps/core/templates/core/includes/: environment_flag.html
apps/core/templates/core/layouts/: base.html
apps/upload/: admin.py  service.py  urls.py  utils.py
apps/upload/api/: urls.py
apps/upload/api/file_upload/: serializers.py  views.py
apps/upload/migrations/: 0001_initial.py
apps/upload/models/: __init__.py  file_upload.py
apps/upload/services/: __init__.py  boto3.py  file_upload.py
compose/local/django/: Dockerfile  entrypoint.sh
compose/local/django/celery/beat/: start.sh
compose/local/django/celery/worker/: start.sh
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/locale/pt_BR/LC_MESSAGES/: django.po
config/settings/: .env-example  __init__.py  base.py  development.py  homo.py  local.py  prod.py  production.py  swagger.py
