[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "Este projeto de boilerplate em Django fornece uma estrutura básica para o desenvolvimento de aplicações web. Ele inclui a configuração inicial de banco de dados, autenticação de usuário, administração, etc."
authors = ["Leonardo Veras <verasleonardo210@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-debug-toolbar = "^4.4.6"
django-environ = "^0.11.2"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
drf-yasg = "^1.21.7"
psycopg2-binary = "^2.9.9"
django-unfold = "^0.39.0"
django-rosetta = "^0.10.1"
setuptools = "^66.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"
ruff = "^0.6.9"

[tool.poetry.group.dev]
optional = true

[tool.ruff]
line-length=80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.base"
python_files = ["test*.py", "*.p_testy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
